<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
	    <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtTaskName_caption" />
	        <EditText
	            android:id="@+id/txtTaskName"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >
	            <requestFocus /></EditText>
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtTaskPath_caption" />
	        <EditText
	            android:id="@+id/txtTaskPath"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtTaskMaxSize_caption" />
	        <EditText
	            android:id="@+id/txtTaskMaxSize"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtTaskMobileMaxSize_caption" />
	        <EditText
	            android:id="@+id/txtTaskMobileMaxSize"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	  	    <TextView
		        android:id="@+id/lblTaskAccount"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/ddlTaskAccount_caption" />
			<Spinner
			    android:id="@+id/ddlAccountInfo"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" />
    	   	<LinearLayout
			    android:id="@+id/lstTaskData"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical" >
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    <Button
	        android:id="@+id/btnSaveTask"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/save" />
        <Button
            android:id="@+id/btnTestTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" />
  		    <Button
	        android:id="@+id/btnCancelTask"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" />
	    <Button
	        android:id="@+id/btnDeleteTask"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/delete" />
	</LinearLayout>
</LinearLayout>