<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
	    <LinearLayout
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical" >
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/txtAccountName_caption" />
		    <EditText
		        android:id="@+id/txtAccountName"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/ddlAccountEngine_caption" />
		    <Spinner
		        android:id="@+id/ddlAccountEngine"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
			<LinearLayout
			    android:id="@+id/lstEngineProperties"
			    android:layout_width="match_parent"
		        android:layout_height="wrap_content"
				android:orientation="vertical" />
	    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/btnSaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
        <Button
            android:id="@+id/btnTestAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" />
        <Button
            android:id="@+id/btnCancelAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btnDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
	</LinearLayout>
</LinearLayout>