<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gray"
    android:orientation="vertical" >
    <ImageView 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />
    <!-- Button 
        android:id="@+id/btnAccounts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAccounts_caption"/>
    <Button 
        android:id="@+id/btnTasks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTasks_caption"/ -->
    <Button
        android:id="@+id/btnWizard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Manage Sync Jobs" />

    <TextView
        android:id="@+id/lblServiceStatus"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/service_not_running"/>
        
    <Button
        android:id="@+id/btnStartService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnStartService_caption" />
    <Button
        android:id="@+id/btnStopService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnStopService_caption" />
    
</LinearLayout>