<?xml version="1.0" encoding="utf-8"?>
<net.netortech.cloudsync.ui.wizard.CustomLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:background="@drawable/background_gray"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/incTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/wizard_step_top" />
	<LinearLayout
		android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center" >
            <LinearLayout
               	android:layout_height="match_parent"
				android:layout_width="0dip"
                android:layout_weight="1"
                android:orientation="vertical" >
	            <TextView
	                android:id="@+id/lblBrowsing"
	                android:layout_height="wrap_content"
	            	android:layout_width="wrap_content"
	            	android:text="@string/currently_browsing" />
	            <TextView
	                android:id="@+id/lblBrowsingPath"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content" />
			</LinearLayout>	            
	   	    <Button 
	   	        android:id="@+id/btnSelectFolder"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent"
		        android:text="@string/select" />
        </LinearLayout>
	    <TextView
	        android:id="@+id/lblFolders"
	        android:layout_marginTop="10sp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/cloud_folders" />
		<ListView
	        android:id="@+id/lstFolders"
	        android:layout_width="match_parent"
	        android:layout_height="0dip"
        	android:layout_weight="1" />
	</LinearLayout>
    <include
        android:id="@+id/incBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/wizard_step_bottom" />    
</net.netortech.cloudsync.ui.wizard.CustomLinearLayout>